--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "env": "^0.0.2",
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1"
   }
 }
