--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "env": "^0.0.2",
     "express": "^4.20.0",
     "jsonwebtoken": "^9.0.2",
